# git_2025_pkg

alacritty/: alacritty.toml  alacritty.yml
eww/: eww.scss  eww.yuck
hypr/: hyprland.conf  hyprpaper.conf  random-wallpaper.sh  unzip-all.sh
nvim/: lazy-lock.json
nvim/lua/config/: lazy.lua  options.lua
nvim/lua/plugins/: autopairs.lua  cmp.lua  colors.lua  dap.lua  lsp.lua  lualine.lua  mason.lua  telescope.lua  treesitter.lua
project_c/: CMakeLists.txt
project_c/src/: camera.c  camera.h  image.c  image.h  main.c  model.c  model.h  shader.c  shader.h  state.h  window.c  window.h
rofi/: config.rasi  rofi-launcher.sh
